AC_INIT([libx], [1.0.0])
AC_CONFIG_AUX_DIR([build-aux])
AC_CANONICAL_HOST
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([foreign tar-pax no-dist-gzip dist-bzip2 1.6 subdir-objects])

m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AC_PROG_CC
AM_PROG_CC_C_O
AC_EXEEXT
AC_ENABLE_STATIC
AC_ENABLE_SHARED
LT_INIT

AM_CONDITIONAL([WINDOWS], [test "x$host_os" = xmingw32 || test "x$host_os" = xcygwin || test "x$host_os" = xmsys])

regular_CFLAGS="-Wall -Werror --pedantic -std=c99 -Wmissing-prototypes -Wshadow -Wstrict-prototypes -Wno-use-after-free -Wformat=2 -pipe"
AC_SUBST([regular_CFLAGS])
AC_SUBST([LT_VERSION_INFO], ["1:0:0"])
AC_CONFIG_FILES([Makefile libx/Makefile libx.pc include/Makefile samples/Makefile])
AC_OUTPUT
