DISTCLEANFILES = compile config.guess config.sub depcomp install-sh ltmain.sh missing Makefile.in
dist-hook:
	$(RM) $(distdir)/compile
	$(RM) $(distdir)/config.guess
	$(RM) $(distdir)/config.sub
	$(RM) $(distdir)/depcomp
	$(RM) $(distdir)/install-sh
	$(RM) $(distdir)/ltmain.sh
	$(RM) $(distdir)/missing
	$(RM) $(distdir)/Makefile.in

